--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@ table {
 
 body {
     --header-green: rgb(100, 155, 100);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     display: grid;
     grid-template-rows: 6em 1fr;
 }
@@ -122,6 +123,7 @@ body {
 .book-dialog {
     border-radius: 24px;
     padding: 36px;
+    width: 18em;
     border: 0px solid black;
     background-color: rgb(100,100,200);
 }
@@ -129,6 +131,7 @@ body {
 .book-form, .input {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .book-form {
@@ -136,18 +139,51 @@ body {
 }
 
 .input {
-    padding: 12px;
-    gap: 4px;
+    gap: 6px;
+}
+
+.input input {
+    width: 16em;
 }
 
 .input-checkbox {
+    display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    width: 14em;
+}
+
+.input-checkbox input {
+    width: 2em;
+    height: 2em;
+}
+
+.input-checkbox label {
+    padding-top: 0.5em;
 }
 
 label {
     color: white;
 }
 
-.dialog-close {
-
+.dialog-buttons {
+    display: flex;
+    justify-content: space-between;
+    width: 18em;
 }
+
+.dialog-submit, .dialog-close {
+    height: 3em;
+    width: 8em;
+    font-size: 1.1em;
+    font-weight: 800;
+    color: white;
+    background-color: rgba(0,0,0,0);
+    border-radius: 1em;
+    border: 4px solid white;
+}
+
+.dialog-close {
+    background-color: red;
+}
+
