--- a/css/style.css
+++ b/css/style.css
@@ -73,11 +73,11 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-left: 5%;
-    padding-right: 5%;
+    padding: 0 8%;
 }
 
 .add-book {
+    font-size: 1.1em;
     font-weight: 800;
     padding: 0.75em 1em 0.75em 1em;
     border: 4px solid white;
@@ -99,7 +99,7 @@ body {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(16em, 1fr));
     gap: 1em;
-    padding: 1em;
+    padding: 1em 8%;
 }
 
 .book-display {
